dmoz-0.1/textgarden/TextGardenLib/TextGardenLib.h

/////////////////////////////////////////////////
// Global
DLLExport void DelCStr(char* CStr);
DLLExport void SetVerbosity(int VerbosityLev);
DLLExport int GetVerbosity();
/////////////////////////////////////////////////
// Notifier
//DLLExport void Notify_PutCallback(void* CallbackF);
//DLLExport bool Notify_IsCallback();
//DLLExport void* Notify_GetCallback();
//DLLExport void Notify_DelCallback();
//DLLExport char* Notify_GetMsg();

/////////////////////////////////////////////////
// Strings
DLLExport int CStr_GetStrs();
DLLExport int CStr_GetStrV();
/////////////////////////////////////////////////
// Memory
//DLLExport int Mem_Gen();
//DLLExport int Mem_GenFromStr(char* Str);
//DLLExport int Mem_GenFromMemory(void* MemoryPt, int MemoryLen);
//DLLExport void Mem_Del(int MemId);
//DLLExport void Mem_Clr(int MemId);
//DLLExport int Mem_GetLen(int MemId);
//DLLExport void Mem_AddVal(int MemId, char Val);
//DLLExport char Mem_GetVal(int MemId, int ValN);
//DLLExport char* Mem_GetMemoryPt(int MemId);
//DLLExport char* Mem_GetAsStr(int MemId);
//
//DLLExport int Mem_Load(int SInId);
//DLLExport void Mem_Save(int MemId, int SOutId);

/////////////////////////////////////////////////
// Integer-Vector
DLLExport int IntV_Gen();
DLLExport void IntV_Del(int IntVId);
DLLExport int IntV_GetLen(int IntVId);
DLLExport int IntV_AddVal(int IntVId, int Val);
DLLExport int IntV_GetVal(int IntVId, int ValN);
DLLExport void IntV_Sort(int IntVId, bool Asc);
DLLExport int IntV_Load(int SInId);
DLLExport void IntV_Save(int IntVId, int SOutId);
/////////////////////////////////////////////////
// String-Vector
DLLExport int StrV_Gen();
DLLExport void StrV_Del(int StrVId);
DLLExport int StrV_GetLen(int StrVId);
DLLExport int StrV_AddVal(int StrVId, char* Val);
DLLExport char* StrV_GetVal(int StrVId, int ValN);
DLLExport void StrV_Sort(int StrVId, bool Asc);
DLLExport int StrV_Load(int SInId);
DLLExport void StrV_Save(int StrVId, int SOutId);
/////////////////////////////////////////////////
// Float-String-Pair-Vector
DLLExport int FSPrV_Gen();
DLLExport void FSPrV_Del(int FSPrVId);
DLLExport int FSPrV_GetLen(int FSPrVId);
DLLExport int FSPrV_AddVal(int FSPrVId, double Flt, char* Str);
DLLExport double FSPrV_GetFltVal(int FSPrVId, int ValN);
DLLExport char* FSPrV_GetStrVal(int FSPrVId, int ValN);
DLLExport void FSPrV_Sort(int FSPrVId, bool Asc);
DLLExport int FSPrV_GetTopVal(int FSPrVId, double WgtPrc, int MxVals, bool UseNegWgt);
DLLExport int FSPrV_Load(int SInId);
DLLExport void FSPrV_Save(int StrVId, int SOutId);
/////////////////////////////////////////////////
// Input-Stream
DLLExport int SIn_GenStdIn();
DLLExport int SIn_GenFileIn(char* FNm);
DLLExport int SIn_GenMemIn(int MemId);
DLLExport int SIn_GenStrIn(char* Str);
DLLExport void SIn_Del(int SInId);
/////////////////////////////////////////////////
// Output-Stream
DLLExport int SOut_GenStdOut();
// traversal
DLLExport void CpDoc_FFirstCpd(int SInId);
DLLExport bool CpDoc_FFNextCpd(int SInId, int CpDocId);
// document-id
DLLExport void CpDoc_PutDocNm(int CpDocId, char* DocNm);
DLLExport char* CpDoc_GetDocNm(int CpDocId);
// date
DLLExport void CpDoc_PutDateStr(int CpDocId, char* DateStr);
DLLExport char* CpDoc_GetDateStr(int CpDocId);
// categories
DLLExport void CpDoc_AddCatNm(int CpDocId, char* CatNm);
DLLExport int CpDoc_GetCats(int CpDocId);
DLLExport char* CpDoc_GetCatNm(int CpDocId, int CatN);
// get full-document
DLLExport char* CpDoc_GetTxtStr(int CpDocId);
DLLExport char* CpDoc_GetHtmlStr(int CpDocId);
// title/headline/byline/dateline
DLLExport void CpDoc_PutTitleStr(int CpDocId, char* TitleStr);
DLLExport char* CpDoc_GetTitleStr(int CpDocId);
DLLExport void CpDoc_PutHeadlineStr(int CpDocId, char* HeadlineStr);
DLLExport char* CpDoc_GetHeadlineStr(int CpDocId);
DLLExport void CpDoc_PutBylineStr(int CpDocId, char* BylineStr);
DLLExport char* CpDoc_GetBylineStr(int CpDocId);
DLLExport void CpDoc_PutDatelineStr(int CpDocId, char* DatelineStr);
DLLExport char* CpDoc_GetDatelineStr(int CpDocId);
// paragraphs/statements
DLLExport void CpDoc_AddParStr(int CpDocId, char* ParStr);
DLLExport int CpDoc_GetPars(int CpDocId);
DLLExport char* CpDoc_GetParStr(int CpDocId, int ParN);
DLLExport char* CpDoc_GetAllParStr(int CpDocId);
// topic codes
DLLExport void CpDoc_AddTopCdNm(int CpDocId, char* TopCdNm);
DLLExport int CpDoc_GetTopCds(int CpDocId);
DLLExport char* CpDoc_GetTopCdNm(int CpDocId, int TopCdN);
// country codes
DLLExport void CpDoc_AddGeoCdNm(int CpDocId, char* GeoCdNm);
DLLExport int CpDoc_GetGeoCds(int CpDocId);
DLLExport char* CpDoc_GetGeoCdNm(int CpDocId, int GeoCdN);
// industry codes
DLLExport void CpDoc_AddIndCdNm(int CpDocId, char* IndCdNm);
DLLExport int CpDoc_GetIndCds(int CpDocId);
DLLExport char* CpDoc_GetIndCdNm(int CpDocId, int IndCdN);
/////////////////////////////////////////////////
// Odbc-Database
DLLExport int OdbcDb_New();
DLLExport void OdbcDb_Del(int OdbcDbId);
// metadata
DLLExport int OdbcDb_GetDataSourceNmV(int OdbcDbId);
DLLExport int OdbcDb_GetTbNmV(int OdbcDbId);
DLLExport int OdbcDb_GetColNmV(int OdbcDbId, char* TbNm);
// connection
DLLExport bool OdbcDb_Connect(int OdbcDbId, char* SrvNm, char* UsrNm, char* PwdStr);
DLLExport void OdbcDb_Disconnect(int OdbcDbId);
DLLExport bool OdbcDb_IsConnected(int OdbcDbId);
// diagnostics handling
DLLExport bool OdbcDb_IsOk(int OdbcDbId);
DLLExport char* OdbcDb_GetMsgStr(int OdbcDbId);
/////////////////////////////////////////////////
// Odbc-Query
DLLExport int OdbcQuery_New(int OdbcDbId);
DLLExport void OdbcQuery_Del(int OdbcQueryId);
// statement execution
DLLExport bool OdbcQuery_ExeSql(int OdbcQueryId, char* SqlStr, int ParamStrVId=-1);
DLLExport bool OdbcQuery_ExeSqlP1(int OdbcQueryId, char* SqlStr, char* ParamStr);
DLLExport bool OdbcQuery_ExeSqlP2(int OdbcQueryId, char* SqlStr, char* ParamStr1, char* ParamStr2);
DLLExport bool OdbcQuery_ExeSqlP3(int OdbcQueryId, char* SqlStr, char* ParamStr1, char* ParamStr2, char* ParamStr3);
DLLExport bool OdbcQuery_IsResultSet(int OdbcQueryId);
DLLExport int OdbcQuery_GetCols(int OdbcQueryId);
DLLExport int OdbcQuery_GetRowsAffected(int OdbcQueryId);
DLLExport char* OdbcQuery_GetColNm(int OdbcQueryId, int ColN);
DLLExport bool OdbcQuery_NextRow(int OdbcQueryId);
DLLExport char* OdbcQuery_GetColVal(int OdbcQueryId, int ColN, int MxValStrLen=10000);
// diagnostics handling
DLLExport bool OdbcQuery_IsOk(int OdbcQueryId);
DLLExport bool OdbcQuery_IsOpOk(int OdbcQueryId);
DLLExport char* OdbcQuery_GetMsgStr(int OdbcQueryId);