dmoz-0.1/textgarden/TextGardenLib/NetTextGardenLib.cs


         [DllImport("TextGardenLib.dll")]
         public static extern void CpDoc_FFirstCpd(int SInId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool CpDoc_FFNextCpd(int SInId, int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern void CpDoc_PutDocNm(int CpDocId, String DocNm);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CpDoc_GetDocNm(int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern void CpDoc_PutDateStr(int CpDocId, String DateStr);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CpDoc_GetDateStr(int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern void CpDoc_AddCatNm(int CpDocId, String CatNm);

         [DllImport("TextGardenLib.dll")]
         public static extern int CpDoc_GetCats(int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CpDoc_GetCatNm(int CpDocId, int CatN);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CpDoc_GetTxtStr(int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CpDoc_GetHtmlStr(int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern void CpDoc_PutTitleStr(int CpDocId, String TitleStr);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CpDoc_GetTitleStr(int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern void CpDoc_PutHeadlineStr(int CpDocId, String HeadlineStr);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CpDoc_GetHeadlineStr(int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern void CpDoc_PutBylineStr(int CpDocId, String BylineStr);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CpDoc_GetBylineStr(int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern void CpDoc_PutDatelineStr(int CpDocId, String DatelineStr);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CpDoc_GetDatelineStr(int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern void CpDoc_AddParStr(int CpDocId, String ParStr);

         [DllImport("TextGardenLib.dll")]
         public static extern int CpDoc_GetPars(int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CpDoc_GetParStr(int CpDocId, int ParN);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CpDoc_GetAllParStr(int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern void CpDoc_AddTopCdNm(int CpDocId, String TopCdNm);

         [DllImport("TextGardenLib.dll")]
         public static extern int CpDoc_GetTopCds(int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CpDoc_GetTopCdNm(int CpDocId, int TopCdN);

         [DllImport("TextGardenLib.dll")]
         public static extern void CpDoc_AddGeoCdNm(int CpDocId, String GeoCdNm);

         [DllImport("TextGardenLib.dll")]
         public static extern int CpDoc_GetGeoCds(int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CpDoc_GetGeoCdNm(int CpDocId, int GeoCdN);

         [DllImport("TextGardenLib.dll")]
         public static extern void CpDoc_AddIndCdNm(int CpDocId, String IndCdNm);

         [DllImport("TextGardenLib.dll")]
         public static extern int CpDoc_GetIndCds(int CpDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CpDoc_GetIndCdNm(int CpDocId, int IndCdN);

         [DllImport("TextGardenLib.dll")]
         public static extern int OdbcDb_New();

         [DllImport("TextGardenLib.dll")]
         public static extern void OdbcDb_Del(int OdbcDbId);

         [DllImport("TextGardenLib.dll")]
         public static extern int OdbcDb_GetDataSourceNmV(int OdbcDbId);

         [DllImport("TextGardenLib.dll")]
         public static extern int OdbcDb_GetTbNmV(int OdbcDbId);

         [DllImport("TextGardenLib.dll")]
         public static extern int OdbcDb_GetColNmV(int OdbcDbId, String TbNm);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool OdbcDb_Connect(int OdbcDbId, String SrvNm, String UsrNm, String PwdStr);

         [DllImport("TextGardenLib.dll")]
         public static extern void OdbcDb_Disconnect(int OdbcDbId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool OdbcDb_IsConnected(int OdbcDbId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool OdbcDb_IsOk(int OdbcDbId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr OdbcDb_GetMsgStr(int OdbcDbId);

         [DllImport("TextGardenLib.dll")]
         public static extern int OdbcQuery_New(int OdbcDbId);

         [DllImport("TextGardenLib.dll")]
         public static extern void OdbcQuery_Del(int OdbcQueryId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool OdbcQuery_ExeSql(int OdbcQueryId, String SqlStr, int ParamStrVId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool OdbcQuery_ExeSqlP1(int OdbcQueryId, String SqlStr, String ParamStr);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool OdbcQuery_ExeSqlP2(int OdbcQueryId, String SqlStr, String ParamStr1, String ParamStr2);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool OdbcQuery_ExeSqlP3(int OdbcQueryId, String SqlStr, String ParamStr1, String ParamStr2, String ParamStr3);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool OdbcQuery_IsResultSet(int OdbcQueryId);

         [DllImport("TextGardenLib.dll")]
         public static extern int OdbcQuery_GetCols(int OdbcQueryId);

         [DllImport("TextGardenLib.dll")]
         public static extern int OdbcQuery_GetRowsAffected(int OdbcQueryId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr OdbcQuery_GetColNm(int OdbcQueryId, int ColN);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool OdbcQuery_NextRow(int OdbcQueryId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr OdbcQuery_GetColVal(int OdbcQueryId, int ColN, int MxValStrLen);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool OdbcQuery_IsOk(int OdbcQueryId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool OdbcQuery_IsOpOk(int OdbcQueryId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr OdbcQuery_GetMsgStr(int OdbcQueryId);

      }//inner class



      public static void SetVerbosity(int VerbosityLev)
      {
          HTextGardenLib.SetVerbosity(VerbosityLev);
      }

      public static int GetVerbosity()
      {
         return HTextGardenLib.GetVerbosity();
      }

      public static int CStr_GetStrs()
      {
         return HTextGardenLib.CStr_GetStrs();
      }

      public static int CStr_GetStrV()
      {
         return HTextGardenLib.CStr_GetStrV();
      }

      public static int IntV_Gen()
      {
         return HTextGardenLib.IntV_Gen();
      }

      public static void IntV_Del(int IntVId)
      {
          HTextGardenLib.IntV_Del(IntVId);
      }

      public static int IntV_GetLen(int IntVId)
      {
         return HTextGardenLib.IntV_GetLen(IntVId);
      }

      public static int IntV_AddVal(int IntVId, int Val)
      {
         return HTextGardenLib.IntV_AddVal(IntVId, Val);
      }

      public static int IntV_GetVal(int IntVId, int ValN)
      {
         return HTextGardenLib.IntV_GetVal(IntVId, ValN);
      }

      public static void IntV_Sort(int IntVId, bool Asc)
      {
          HTextGardenLib.IntV_Sort(IntVId, Asc);
      }

      public static int IntV_Load(int SInId)
      {
         return HTextGardenLib.IntV_Load(SInId);
      }

      public static void IntV_Save(int IntVId, int SOutId)
      {
          HTextGardenLib.IntV_Save(IntVId, SOutId);
      }

      public static int StrV_Gen()
      {
         return HTextGardenLib.StrV_Gen();
      }

      public static void StrV_Del(int StrVId)
      {
          HTextGardenLib.StrV_Del(StrVId);
      }

      public static int StrV_GetLen(int StrVId)
      {
         return HTextGardenLib.StrV_GetLen(StrVId);
      }

      public static int StrV_AddVal(int StrVId, String Val)
      {
         return HTextGardenLib.StrV_AddVal(StrVId, Val);
      }

      public static String StrV_GetVal(int StrVId, int ValN)
      {
         IntPtr i = HTextGardenLib.StrV_GetVal(StrVId, ValN);
         string s = Marshal.PtrToStringAnsi(i);
         HTextGardenLib.DelCStr(i);
         return s;
      }

      public static void StrV_Sort(int StrVId, bool Asc)
      {
          HTextGardenLib.StrV_Sort(StrVId, Asc);
      }

      public static int StrV_Load(int SInId)
      {
         return HTextGardenLib.StrV_Load(SInId);
      }

      public static void StrV_Save(int StrVId, int SOutId)
      {
          HTextGardenLib.StrV_Save(StrVId, SOutId);
      }

      public static int FSPrV_Gen()
      {
         return HTextGardenLib.FSPrV_Gen();
      }

      public static void FSPrV_Del(int FSPrVId)
      {
          HTextGardenLib.FSPrV_Del(FSPrVId);
      }

      public static int FSPrV_GetLen(int FSPrVId)
      {
         return HTextGardenLib.FSPrV_GetLen(FSPrVId);
      }

      public static int FSPrV_AddVal(int FSPrVId, double Flt, String Str)
      {
         return HTextGardenLib.FSPrV_AddVal(FSPrVId, Flt, Str);
      }

      public static double FSPrV_GetFltVal(int FSPrVId, int ValN)
      {
         return HTextGardenLib.FSPrV_GetFltVal(FSPrVId, ValN);
      }

      public static String FSPrV_GetStrVal(int FSPrVId, int ValN)
      {
         IntPtr i = HTextGardenLib.FSPrV_GetStrVal(FSPrVId, ValN);
         string s = Marshal.PtrToStringAnsi(i);
         HTextGardenLib.DelCStr(i);
         return s;
      }

      public static void FSPrV_Sort(int FSPrVId, bool Asc)
      {
          HTextGardenLib.FSPrV_Sort(FSPrVId, Asc);
      }

      public static int FSPrV_GetTopVal(int FSPrVId, double WgtPrc, int MxVals, bool UseNegWgt)
      {
         return HTextGardenLib.FSPrV_GetTopVal(FSPrVId, WgtPrc, MxVals, UseNegWgt);
      }

      public static int FSPrV_Load(int SInId)
      {
         return HTextGardenLib.FSPrV_Load(SInId);
      }

      public static void FSPrV_Save(int StrVId, int SOutId)
      {
          HTextGardenLib.FSPrV_Save(StrVId, SOutId);
      }

      public static int SIn_GenStdIn()
      {
         return HTextGardenLib.SIn_GenStdIn();
      }

      public static int SIn_GenFileIn(String FNm)
      {
         return HTextGardenLib.SIn_GenFileIn(FNm);
      }

      public static int SIn_GenMemIn(int MemId)
      {
         return HTextGardenLib.SIn_GenMemIn(MemId);
      }

      public static int SIn_GenStrIn(String Str)
      {
         return HTextGardenLib.SIn_GenStrIn(Str);
      }

      public static void SIn_Del(int SInId)
      {
          HTextGardenLib.SIn_Del(SInId);
      }

      public static int SOut_GenStdOut()
      {
         return HTextGardenLib.SOut_GenStdOut();
      }
